--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,18 @@
   class="flex justify-between items-center w-full p-5 bg-primary text-white h-16"
 >
   <div class="text-3xl">NotesApp</div>
-  <div>
-    <button>Create</button>
-    <button>Edit tags</button>
+  <div class="flex items-center justify-center gap-4">
+    <button
+      class="bg-white border border-white text-black px-3 py-1 rounded ease-in duration-100 hover:bg-gray-200"
+      routerLink="notes/new"
+    >
+      New Note
+    </button>
+    <button
+      class="border border-white ease-in px-3 py-1 rounded duration-100 hover:bg-white hover:text-black"
+      routerLink="tags"
+    >
+      Edit tags
+    </button>
   </div>
 </div>
