--- a/src/app/notes/new-note/new-note.component.html
+++ b/src/app/notes/new-note/new-note.component.html
@@ -1,1 +1,38 @@
-<p>new-note works!</p>
+<p class="text-5xl">New Note</p>
+<div>
+  <form class="flex justify-center items-center">
+    <div class="w-full md:w-1/2 px-3">
+      <label
+        class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+        for="new-note-title"
+      >
+        Title
+      </label>
+      <input
+        class="appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-400 rounded py-2-5 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+        id="grid-last-name"
+        type="text"
+        placeholder="Search by title..."
+        (input)="onTitleChange($event)"
+      />
+    </div>
+    <div class="w-full md:w-1/2 px-3">
+      <label
+        class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+        for="new-note-tags"
+      >
+        Tags
+      </label>
+      <ng-multiselect-dropdown
+        [placeholder]="'Tags...'"
+        [settings]="dropdownSettings"
+        [data]="dropdownList"
+        [(ngModel)]="selectedItems"
+        (onSelect)="onItemSelect($event)"
+        (onDeSelect)="onDeSelect($event)"
+        (onSelectAll)="onSelectAll($event)"
+      >
+      </ng-multiselect-dropdown>
+    </div>
+  </form>
+</div>
