Styled header buttons

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div
   class="flex justify-between items-center w-full p-5 bg-primary text-white h-16"
 >
-  <div class="text-3xl">NotesApp</div>
+  <div class="text-4xl hover:cursor-pointer" routerLink="/">NotesApp</div>
   <div class="flex items-center justify-center gap-4">
     <button
       class="bg-white border border-white text-black px-3 py-1 rounded ease-in duration-100 hover:bg-gray-200"
