--- a/src/app/notes/new-note/new-note.component.html
+++ b/src/app/notes/new-note/new-note.component.html
@@ -1,38 +1,80 @@
-<p class="text-5xl">New Note</p>
-<div>
-  <form class="flex justify-center items-center">
-    <div class="w-full md:w-1/2 px-3">
-      <label
-        class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-        for="new-note-title"
-      >
-        Title
-      </label>
-      <input
-        class="appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-400 rounded py-2-5 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-        id="grid-last-name"
-        type="text"
-        placeholder="Search by title..."
-        (input)="onTitleChange($event)"
-      />
+<p class="text-3xl">New Note</p>
+<div class="mt-5">
+  <form class="flex flex-col" (ngSubmit)="onSubmit(f)" #f="ngForm">
+    <div class="flex justify-center items-center">
+      <div class="w-full md:w-1/2 px-3">
+        <label
+          class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+          for="new-note-title"
+        >
+          Title
+        </label>
+        <input
+          class="appearance-none block w-full text-gray-700 border border-gray-400 rounded py-2-5 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+          id="new-note-title"
+          type="text"
+          placeholder="Enter title..."
+          name="new-note-title"
+          ngModel
+        />
+      </div>
+      <div class="w-full md:w-1/2 px-3">
+        <label
+          class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+          for="new-note-tags"
+        >
+          Tags
+        </label>
+        <!-- <ng-multiselect-dropdown
+          [placeholder]="'Tags...'"
+          [settings]="dropdownSettings"
+          [data]="dropdownList"
+          [(ngModel)]="selectedItems"
+          (onSelect)="onItemSelect($event)"
+          (onDeSelect)="onDeSelect($event)"
+          (onSelectAll)="onSelectAll($event)"
+        >
+        </ng-multiselect-dropdown> -->
+        <!-- <app-dropdown ngModel name="new-note-tags" [options]="dropdownOptions">
+        </app-dropdown> -->
+        <ng-select
+          name="new-note-tags"
+          [(ngModel)]="selectedItems"
+          [multiple]="true"
+          [searchable]="true"
+          placeholder="Tags"
+        >
+          <ng-option *ngFor="let tag of tagOptions" [value]="tag.id">{{
+            tag.text
+          }}</ng-option>
+        </ng-select>
+      </div>
     </div>
-    <div class="w-full md:w-1/2 px-3">
+    <div class="mt-3 w-full px-3">
       <label
         class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
         for="new-note-tags"
       >
-        Tags
+        Body
       </label>
-      <ng-multiselect-dropdown
-        [placeholder]="'Tags...'"
-        [settings]="dropdownSettings"
-        [data]="dropdownList"
-        [(ngModel)]="selectedItems"
-        (onSelect)="onItemSelect($event)"
-        (onDeSelect)="onDeSelect($event)"
-        (onSelectAll)="onSelectAll($event)"
+      <textarea
+        name="new-note-content"
+        ngModel
+        class="h-40 appearance-none block w-full text-gray-700 border border-gray-400 rounded py-2-5 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
       >
-      </ng-multiselect-dropdown>
+      </textarea>
+    </div>
+    <div class="mt-3 flex items-center justify-center gap-4">
+      <button
+        class="bg-primary border border-white text-white px-3 py-1 rounded ease-in duration-100"
+      >
+        Save
+      </button>
+      <button
+        class="border border-primary ease-in px-2 py-1 rounded duration-100 hover:bg-primary hover:text-white"
+      >
+        Cancel
+      </button>
     </div>
   </form>
 </div>
