--- a/src/app/notes/new-note/new-note.component.html
+++ b/src/app/notes/new-note/new-note.component.html
@@ -37,12 +37,14 @@
         </ng-multiselect-dropdown> -->
         <!-- <app-dropdown ngModel name="new-note-tags" [options]="dropdownOptions">
         </app-dropdown> -->
+
         <ng-select
           name="new-note-tags"
           [(ngModel)]="selectedItems"
           [multiple]="true"
           [searchable]="true"
           placeholder="Tags"
+          class="customselect"
         >
           <ng-option *ngFor="let tag of tagOptions" [value]="tag.id">{{
             tag.text
@@ -64,11 +66,25 @@
       >
       </textarea>
     </div>
+    <div class="mt-3 w-full px-3">
+      <label
+        class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+        for="new-note-color"
+      >
+        Background color
+      </label>
+      <input
+        class="hover:cursor-pointer rounded"
+        name="new-note-color"
+        [(colorPicker)]="noteColor"
+        [style.background]="noteColor"
+      />
+    </div>
     <div class="mt-3 flex items-center justify-center gap-4">
       <button
-        class="bg-primary border border-white text-white px-3 py-1 rounded ease-in duration-100"
+        class="bg-primary border border-white text-white px-3 py-1 rounded ease-in duration-100 hover:bg-gray-600"
       >
-        Save
+        Create
       </button>
       <button
         class="border border-primary ease-in px-2 py-1 rounded duration-100 hover:bg-primary hover:text-white"
