--- a/src/app/notes/note-detail/note-detail.component.html
+++ b/src/app/notes/note-detail/note-detail.component.html
@@ -1,1 +1,31 @@
-<p>note-detail works!</p>
+<div class="container px-10">
+  <div class="flex justify-between items-start">
+    <div class="flex flex-col gap-3">
+      <p class="text-4xl">{{ currentNote.title }}</p>
+      <div class="flex gap-2">
+        <div
+          *ngFor="let tag of currentNote.tags"
+          class="px-2 py-1 rounded-full bg-gray-200/70 text-gray-700"
+        >
+          {{ tag.text }}
+        </div>
+      </div>
+      <div class="mt-3">
+        {{ currentNote.content }}
+      </div>
+    </div>
+    <div class="flex gap-2">
+      <button
+        class="bg-black border border-black text-white px-3 py-1 rounded ease-in duration-100 hover:bg-gray-800"
+        routerLink="edit"
+      >
+        Edit
+      </button>
+      <button
+        class="border border-red-600 text-red-600 px-3 py-1 rounded ease-in duration-100 hover:bg-red-600 hover:text-white"
+      >
+        Delete
+      </button>
+    </div>
+  </div>
+</div>
