--- a/src/app/notes/new-note/new-note.component.html
+++ b/src/app/notes/new-note/new-note.component.html
@@ -55,7 +55,7 @@
     <div class="mt-3 w-full px-3">
       <label
         class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-        for="new-note-tags"
+        for="new-note-content"
       >
         Body
       </label>
