--- a/src/app/notes/new-note/new-note.component.html
+++ b/src/app/notes/new-note/new-note.component.html
@@ -88,7 +88,9 @@
         Create
       </button>
       <button
+        type="button"
         class="border border-primary ease-in px-2 py-1 rounded duration-100 hover:bg-primary hover:text-white"
+        routerLink="/"
       >
         Cancel
       </button>
