--- a/src/app/notes/note-detail/note-detail.component.html
+++ b/src/app/notes/note-detail/note-detail.component.html
@@ -23,6 +23,7 @@
       </button>
       <button
         class="border border-red-600 text-red-600 px-3 py-1 rounded ease-in duration-100 hover:bg-red-600 hover:text-white"
+        (click)="onDelete()"
       >
         Delete
       </button>
