Created tag service and firebase setup for tags

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
       class="border border-white ease-in px-3 py-1 rounded duration-100 hover:bg-white hover:text-black"
       routerLink="tags"
     >
-      Edit tags
+      Tags
     </button>
   </div>
 </div>
