--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,7 +59,7 @@
         >
           <fa-icon
             [ngClass]="{
-              'text-gray-300': !note.isPinned,
+              'text-gray-500': !note.isPinned,
               'text-black': note.isPinned
             }"
             [icon]="faThumbTack"
@@ -85,7 +85,7 @@
         </div>
       </div>
       <p class="text-gray-700 text-sm">
-        Last modified: {{ note.last_modified | date: "mediumDate" }}
+        Edited: {{ note.last_modified | date: "MMM dd, YYYY (h:m aa) " }}
       </p>
     </div>
   </div>
