--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,17 +20,6 @@
     >
       Tags
     </label>
-    <!-- <ng-multiselect-dropdown
-      [placeholder]="'Tags...'"
-      [settings]="dropdownSettings"
-      [data]="dropdownList"
-      [(ngModel)]="selectedItems"
-      (onSelect)="onItemSelect($event)"
-      (onDeSelect)="onDeSelect($event)"
-      (onSelectAll)="onSelectAll($event)"
-    >
-    </ng-multiselect-dropdown> -->
-    <!-- <app-dropdown></app-dropdown> -->
     <ng-select
       name="search-tags"
       [(ngModel)]="selectedItems"
@@ -42,6 +31,15 @@
         tag.text
       }}</ng-option>
     </ng-select>
+  </div>
+</div>
+<div *ngIf="notes.length === 0" class="w-100 py-36">
+  <div class="flex flex-col items-center">
+    <fa-icon
+      class="text-gray-300 text-8xl mb-3"
+      [icon]="faNoteSticky"
+    ></fa-icon>
+    <p class="text-2xl text-gray-600">Notes you add appear here</p>
   </div>
 </div>
 <div class="grid grid-cols-4 gap-4 mt-10">
@@ -70,7 +68,7 @@
       <p class="break-words">
         {{
           note.content.length > 70
-            ? (note.content | slice: 0:70) + "..."
+            ? (note.content | slice : 0 : 70) + "..."
             : note.content
         }}
       </p>
@@ -85,7 +83,7 @@
         </div>
       </div>
       <p class="text-gray-700 text-sm">
-        Edited: {{ note.last_modified | date: "MMM dd, YYYY (h:m aa) " }}
+        Edited: {{ note.last_modified | date : "MMM dd, YYYY (h:m aa) " }}
       </p>
     </div>
   </div>
