--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,6 +11,8 @@
       id="search-title"
       type="text"
       placeholder="Search by title..."
+      [(ngModel)]="title"
+      (ngModelChange)="onTitleChange($event)"
     />
   </div>
   <div class="w-full md:w-1/2">
@@ -26,6 +28,7 @@
       [multiple]="true"
       [searchable]="true"
       placeholder="Search with tags.."
+      (change)="onTagsChange($event)"
     >
       <ng-option *ngFor="let tag of tagOptions" [value]="tag.id">{{
         tag.text
@@ -42,10 +45,19 @@
     <p class="text-2xl text-gray-600">Notes you add appear here</p>
   </div>
 </div>
+<div *ngIf="notes.length !== 0 && matchingNotes.length===0" class="w-100 py-36">
+  <div class="flex flex-col items-center">
+    <fa-icon
+      class="text-gray-300 text-8xl mb-3"
+      [icon]="faMagnifyingGlass"
+    ></fa-icon>
+    <p class="text-2xl text-gray-600">No notes found</p>
+  </div>
+</div>
 <div class="grid grid-cols-4 gap-4 mt-10">
   <div
     class="flex flex-col justify-between p-4 border border-gray-500 rounded ease-in duration-100 hover:shadow-lg hover:cursor-pointer"
-    *ngFor="let note of notes"
+    *ngFor="let note of matchingNotes"
     [ngStyle]="{ 'background-color': note.color }"
     (click)="onNoteClicked(note.id)"
   >
