--- a/src/app/notes/note-edit/note-edit.component.html
+++ b/src/app/notes/note-edit/note-edit.component.html
@@ -81,19 +81,27 @@
         [style.background]="currentNote.color"
       />
     </div>
-    <div class="mt-3 flex items-center justify-center gap-4">
-      <button
-        class="bg-primary border border-white text-white px-3 py-1 rounded ease-in duration-100 hover:bg-gray-600"
-      >
-        Save
-      </button>
-      <button
-        type="button"
-        class="border border-primary ease-in px-2 py-1 rounded duration-100 hover:bg-primary hover:text-white"
-        [routerLink]="['/notes', currentNote.id]"
-      >
-        Cancel
-      </button>
+    <div class="mt-3 flex flex-col gap-1">
+      <div class="flex items-center justify-center gap-4">
+        <button
+          class="bg-primary border border-white text-white px-3 py-1 rounded ease-in duration-100 hover:bg-gray-600"
+        >
+          Save
+        </button>
+        <button
+          type="button"
+          class="border border-primary ease-in px-2 py-1 rounded duration-100 hover:bg-primary hover:text-white"
+          [routerLink]="['/notes', currentNote.id]"
+        >
+          Cancel
+        </button>
+      </div>
+      <div class="flex items-center justify-center gap-4">
+        <div *ngIf="isLoading" class="w-6 h-6">
+          <img src="assets/loader.png" class="text-sm animate-spin" />
+        </div>
+        <p *ngIf="message.length > 0">{{ message }}</p>
+      </div>
     </div>
   </form>
 </div>
